# mergen4bsd

./: .gitignore  CMakeLists.txt  Makefile  README.md  global.hpp  main.cpp
aud/: microphone.cpp  microphone.hpp  sound_card.cpp  sound_card.hpp  speaker.cpp  speaker.hpp
hpt/: touchpad.cpp  touchpad.hpp
vis/: bitmap.hpp  camera.cpp  camera.hpp  edge_detection.hpp  memory.cpp  memory.hpp  segment.hpp  segmentation.cpp  segmentation.hpp  videodev2.hpp  visual_stm.cpp  visual_stm.hpp
